src/objects/Mogli_SMS__Notification_Settings__c.object
<CustomObject>
    <description>holds notification settings per user for Mogli SMS notifications</description>
    <fields>
        <fullName>Mogli_SMS__Allow_Notifications_For__c</fullName>
        <description>what kind of SMS records the user will receive custom notifications for</description>
        <label>Allow Notifications For</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Any incoming SMS</fullName>
                    <default>true</default>
                    <label>Any incoming SMS</label>
                </value>
                <value>
                    <fullName>Only incoming SMS from a Contact I own</fullName>
                </value>
                <value>
                    <fullName>Only incoming SMS from a Lead I own</fullName>
                </value>
                <value>
                    <fullName>Only incoming SMS from Contacts and Leads I own</fullName>
                </value>
                <value>
                    <fullName>Do not show any SMS notifications</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Mogli_SMS__Play_Notification_Sound__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Plays audio file for incoming notifications</description>
        <inlineHelpText>Allow tone for incoming notifications</inlineHelpText>
        <label>Play Notification Sound</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Mogli_SMS__Select_All_Gateways__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Per new requirement for Enhanced Notification Settings where the user can block or accept numbers from individual gateways.  This is an option to select all gateways.</description>
        <inlineHelpText>Select/Deselects all the Gateways that are available.</inlineHelpText>
        <label>Select All Gateways</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Mogli_SMS__User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>User of the notification setttings record</description>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Notification_Settings</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Notification Setting</label>
    <listViews>
        <fullName>Mogli_SMS__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>NS-{00000}</displayFormat>
        <label>Notification Setting Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Notification Settings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>